--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,6 @@ data_preprocess/preprocess/concat_clean
 data_preprocess/preprocess/create_features/ETHUSDT
 data_preprocess/preprocess/merge/ETHUSDT
 test.ipynb
+EarnHFT_Algorithm/result_risk
+data_preprocess/preprocess/create_features/BTCUSDT/2023-08-10-2023-10-13/beatrate_0.0001
+data_preprocess/preprocess/merge/BTCUSDT/2023-08-10-2023-10-13
